2022-07-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/stm8/gen.c,
	  src/z80/gen.c,
	  support/regression/tests/bug-3461.c:
	  Fix bug #3461.

2022-07-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-3410.c.in:
	  Disable a test for mos6502, since that port it still lacks _BitInt.
	* support/regression/tests/bug-3461.c:
	  New (currently disabled) test for bug #3461.
	* device/lib/ds400/ds400rom.c:
	  Remove use of #pragma sdcc_hash.
	* src/stm8/gen.c,
	  src/pdk/gen.c,
	  src/z80/gen.c:
	  Partial fix for bug #3461.

2022-07-16 Felix Salfelder <felix AT salfelder.org>

	* src/SDCC.{lex,y}, support/cpp/libcpp/{init,macro}.c:
	  move __func__ elaboration entirely to sdcc.

2022-07-16 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-1952.c,
	  support/valdiag/tests/bug-1952.c:
	  Tests for __func__.
	* support/regression/tests/bug-3410.c.in:
	  Disable a test for mos65c02, since that port it still lacks _BitInt.

2022-07-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-3410.c.in:
	  Fix bug #3410.
	* src/SDCCsalloc.hpp:
	  Fix bug #3397.

2022-07-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3459.c:
	  Fix bug #3459.

2022-07-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-3456.c,
	  support/regression/tests/bug-3459.c,
	  support/regression/tests/bug-3460.c.in:
	  Fix bug #3460.

2022-07-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-3459.c:
	  An attempt at creating a regression test for bug #3459.
	* src/z80/gen.c,
	  support/regression/tests/bug-3456.c:
	  Fix bug #3456.

2022-07-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
