@@ -11224,19 +11224,17 @@ genNearPointerSet (operand * right, operand * result, iCode * ic, iCode * pi)
   asmop *aop = NULL;
   reg_info *preg = NULL;
   const char *rname;
-  sym_link *retype, *letype;
+  wassert (operandType (result)->next);
+  bool bit_field = IS_BITVAR (operandType (result)->next);
   sym_link *ptype = operandType (result);
 
   D (emitcode (";", "genNearPointerSet"));
-
-  retype = getSpec (operandType (right));
-  letype = getSpec (ptype);
 
   aopOp (result, ic, FALSE, FALSE);
 
   /* if the result is rematerializable &
      in data space & not a bit variable */
-  if (AOP_TYPE (result) == AOP_IMMD && DCL_TYPE (ptype) == POINTER && !IS_BITVAR (retype) && !IS_BITVAR (letype))
+  if (AOP_TYPE (result) == AOP_IMMD && DCL_TYPE (ptype) == POINTER && !bit_field)
     {
       genDataPointerSet (right, result, ic);
       return;
@@ -11261,9 +11259,9 @@ genNearPointerSet (operand * right, operand * result, iCode * ic, iCode * pi)
   aopOp (right, ic, FALSE, FALSE);
 
   rname = Safe_strdup (rname);
-  /* if bitfield then unpack the bits */
-  if (IS_BITFIELD (retype) || IS_BITFIELD (letype))
-    genPackBits ((IS_BITFIELD (retype) ? retype : letype), right, rname, POINTER);
+  /* if bit-field then pack the bits */
+  if (bit_field)
+    genPackBits (operandType (result)->next, right, rname, POINTER);
   else
     {
       /* we can just get the values */
@@ -11325,12 +11323,10 @@ genPagedPointerSet (operand * right, operand * result, iCode * ic, iCode * pi)
   asmop *aop = NULL;
   reg_info *preg = NULL;
   const char *rname;
-  sym_link *retype, *letype;
+  wassert (operandType (result)->next);
+  bool bit_field = IS_BITVAR (operandType (result)->next);
 
   D (emitcode (";", "genPagedPointerSet"));
-
-  retype = getSpec (operandType (right));
-  letype = getSpec (operandType (result));
 
   aopOp (result, ic, FALSE, FALSE);
 
@@ -11353,9 +11349,9 @@ genPagedPointerSet (operand * right, operand * result, iCode * ic, iCode * pi)
   aopOp (right, ic, FALSE, FALSE);
 
   rname = Safe_strdup (rname);
-  /* if bitfield then unpack the bits */
-  if (IS_BITFIELD (retype) || IS_BITFIELD (letype))
-    genPackBits ((IS_BITFIELD (retype) ? retype : letype), right, rname, PPOINTER);
+  /* if bit-field then pack the bits */
+  if (bit_field)
+    genPackBits (operandType (result)->next, right, rname, PPOINTER);
   else
     {
       /* we can just get the values */
@@ -11409,8 +11405,8 @@ static void
 genFarPointerSet (operand * right, operand * result, iCode * ic, iCode * pi)
 {
   int size, offset, dopi;
-  sym_link *retype = getSpec (operandType (right));
-  sym_link *letype = getSpec (operandType (result));
+  wassert (operandType (result)->next);
+  bool bit_field = IS_BITVAR (operandType (result)->next);
 
   D (emitcode (";", "genFarPointerSet"));
 
@@ -11420,14 +11416,14 @@ genFarPointerSet (operand * right, operand * result, iCode * ic, iCode * pi)
   /* so dptr now contains the address */
   aopOp (right, ic, FALSE, (AOP_INDPTRn (result) ? FALSE : TRUE));
 
-  /* if bit then unpack */
-  if (IS_BITFIELD (retype) || IS_BITFIELD (letype))
+  /* if bit-field then pack */
+  if (bit_field)
     {
       if (AOP_INDPTRn (result))
         {
           genSetDPTR (AOP (result)->aopu.dptr);
         }
-      genPackBits ((IS_BITFIELD (retype) ? retype : letype), right, "dptr", FPOINTER);
+      genPackBits (operandType (result)->next, right, "dptr", FPOINTER);
       if (AOP_INDPTRn (result))
         {
           genSetDPTR (0);
@@ -11539,8 +11535,8 @@ genGenPointerSet (operand * right, operand * result, iCode * ic, iCode * pi)
 {
   int size, offset, dopi;
   bool pushedB;
-  sym_link *retype = getSpec (operandType (right));
-  sym_link *letype = getSpec (operandType (result));
+  wassert (operandType (result)->next);
+  bool bit_field = IS_BITVAR (operandType (result)->next);
 
   D (emitcode (";", "genGenPointerSet"));
 
@@ -11551,10 +11547,10 @@ genGenPointerSet (operand * right, operand * result, iCode * ic, iCode * pi)
   /* so dptr-b now contains the address */
   aopOp (right, ic, FALSE, (AOP_INDPTRn (result) ? FALSE : TRUE));
 
-  /* if bit then unpack */
-  if (IS_BITFIELD (retype) || IS_BITFIELD (letype))
+  /* if bit-field then pack */
+  if (bit_field)
     {
-      genPackBits ((IS_BITFIELD (retype) ? retype : letype), right, "dptr", GPOINTER);
+      genPackBits (operandType (result)->next, right, "dptr", GPOINTER);
     }
   else
     {
